--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "src/styles.css",
               "src/assets/js/owl-carousel/owl.carousel.css",
               "src/assets/js/owl-carousel/owl.transitions.css",
-              "src/assets/rs-plugin/css/settings.css"
+              "src/assets/rs-plugin/css/settings.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": [],
             "localize": false,
@@ -117,7 +118,8 @@
               "src/styles.css",
               "src/assets/js/owl-carousel/owl.carousel.css",
               "src/assets/js/owl-carousel/owl.transitions.css",
-              "src/assets/rs-plugin/css/settings.css"
+              "src/assets/rs-plugin/css/settings.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           }
